[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{email = "you@example.com", name = "Stragri"}]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = []
description = "A small Python application made for a friend."
dynamic = ["version"]
license = "MIT"
name = "MOLPy"
readme = "README.md"
requires-python = ">=3.10,<4"

[project.optional-dependencies]
checks = [
  "black>=23,<24",
  "flake8>=6,<7",
  "isort>=5,<6",
  "mypy==1.8.0",
]
docs = [
  "mkdocs-material>=9,<10",
]
tests = [
  "coverage[toml]>=7,<8",
  "httpx>=0.23,<1",
  "pytest>=7,<8",
  "pytest-mock>=3,<4",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
fail_under = 70
show_missing = true

[tool.coverage.run]
command_line = "-m pytest"
source = ["MOLPy", "tests"]

[tool.hatch.build.targets.sdist]
include = ["/MOLPy"]

[tool.hatch.envs.ci]
dev-mode = false
features = [
  "checks",
  "tests",
]
path = ".venv"

[tool.hatch.envs.default]
dev-mode = true
features = [
  "checks",
  "docs",
  "tests",
]
path = ".venv"

[tool.hatch.envs.default.scripts]
check = [
  "black --check --diff .",
  "isort --check --diff .",
  "flake8 --extend-exclude=.venv,bin,build,cache,dist,lib --max-line-length=88",
  "mypy",
  "npx -s -y prettier@'^2' . --check",
  "npx -s -y cspell --dot --gitignore *.md **/*.md",
]
format = [
  "black .",
  "isort .",
  "npx -s -y prettier@'^2' . --write",
]

[tool.hatch.envs.production]
dev-mode = false
features = []
path = ".venv"

[tool.hatch.version]
path = "MOLPy/__init__.py"

[tool.isort]
profile = "black"
src_paths = ["MOLPy", "tests"]

[tool.mypy]
files = ["**/*.py"]
show_error_codes = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]
